--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
+    "@ionic/angular": "^5.0.5",
     "@ionic/storage": "2.2.0",
     "@swimlane/ngx-datatable": "^16.0.3",
     "ionic-angular": "3.9.9",
